# incognita

./: AndroidManifest.xml  BUILD.bazel  FAQ.md  LICENSE  MODULE.bazel  Privacy.md  README.md  WORKSPACE  maven_install.json
res/layout/: about.xml
res/mipmap-anydpi-v26/: icon.xml
res/values/: colors.xml  strings.xml  styles.xml
res/xml/: shortcuts.xml
src/com/yhsif/incognita/: AboutActivity.kt  LauncherActivity.kt
tools/: repin_dependencies.sh
