load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load(
    "@rules_oppia_android//:oppia_android_application.bzl",
    "declare_deployable_application",
    "oppia_android_application",
)

PACKAGE = "com.yhsif.incognita"

MANIFEST = "AndroidManifest.xml"

MANIFEST_VALUES = {"PACKAGE": PACKAGE}

declare_deployable_application(
    name = "install",
    aab_target = "//:debug",
)

[
    oppia_android_application(
        name = name,
        config_file = "//:bundle_config.pb.json",
        custom_package = PACKAGE,
        dexopts = ["--force-jumbo"],
        manifest = MANIFEST,
        manifest_values = MANIFEST_VALUES,
        proguard_generate_mapping = False,
        shrink_resources = release,
        deps = [
            ":incognita",
        ],
    )
    for name, release in (
        ("debug", False),
        ("release", True),
    )
]

kt_android_library(
    name = "incognita",
    srcs = glob(["src/**/*.kt"]),
    custom_package = PACKAGE,
    manifest = MANIFEST,
    resource_files = glob(["res/**/*"]),
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_browser_browser",
        "@maven//:androidx_core_core_ktx",
        "@maven//:com_google_android_material_material",
    ],
)
